--- a/app/src/main/res/layout/activity_future.xml
+++ b/app/src/main/res/layout/activity_future.xml
@@ -38,15 +38,14 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="24dp"
-            android:layout_marginEnd="24dp"
+            android:layout_marginStart="19.2dp"
+            android:layout_marginEnd="19.2dp"
             android:background="@drawable/gradient_background_banner">
 
             <ImageView
                 android:id="@+id/imageView2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:srcCompat="@drawable/large_white_circle" />
@@ -55,9 +54,9 @@
                 android:id="@+id/linearLayout2"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginEnd="8dp"
+                android:layout_marginStart="6.4dp"
+                android:layout_marginTop="6.4dp"
+                android:layout_marginEnd="6.4dp"
                 android:orientation="vertical"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -73,15 +72,14 @@
                         android:id="@+id/imageView3"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_weight="0.5"
-
+                        android:layout_weight="0.4"
                         app:srcCompat="@drawable/cloudy_sunny" />
 
                     <LinearLayout
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
-                        android:layout_marginStart="24dp"
-                        android:layout_weight="0.5"
+                        android:layout_marginStart="19.2dp"
+                        android:layout_weight="0.4"
                         android:gravity="center"
                         android:orientation="vertical">
 
@@ -91,15 +89,15 @@
                             android:layout_height="wrap_content"
                             android:text="Tommorow"
                             android:textColor="@color/white"
-                            android:textSize="20sp" />
+                            android:textSize="16sp" />
 
                         <TextView
                             android:id="@+id/textView10"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:text="25°"
+                            android:text="20°"
                             android:textColor="@color/white"
-                            android:textSize="43sp" />
+                            android:textSize="34.4sp" />
 
                         <TextView
                             android:id="@+id/textView11"
@@ -107,7 +105,7 @@
                             android:layout_height="wrap_content"
                             android:text="Mostly Cloudy"
                             android:textColor="@color/white"
-                            android:textSize="20sp" />
+                            android:textSize="16sp" />
                     </LinearLayout>
                 </LinearLayout>
 
@@ -115,7 +113,7 @@
                     android:id="@+id/linearLayout"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_marginTop="32dp"
+                    android:layout_marginTop="25.6dp"
                     android:orientation="horizontal"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -125,24 +123,22 @@
                     <LinearLayout
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_margin="16dp"
-
-                        android:layout_weight="0.333"
+                        android:layout_margin="12.8dp"
+                        android:layout_weight="0.2667"
                         android:orientation="vertical">
 
                         <ImageView
                             android:id="@+id/imageView4"
-                            android:layout_width="34dp"
-                            android:layout_height="34dp"
+                            android:layout_width="28.8dp"
+                            android:layout_height="28.8dp"
                             android:layout_gravity="center"
-
                             app:srcCompat="@drawable/rain" />
 
                         <TextView
                             android:id="@+id/textView"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:text="22%"
+                            android:text="17.6%"
                             android:textAlignment="center"
                             android:textColor="@color/white"
                             android:textStyle="bold" />
@@ -159,24 +155,22 @@
                     <LinearLayout
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_margin="16dp"
-
-                        android:layout_weight="0.333"
+                        android:layout_margin="12.8dp"
+                        android:layout_weight="0.2667"
                         android:orientation="vertical">
 
                         <ImageView
                             android:id="@+id/imageView5"
-                            android:layout_width="34dp"
-                            android:layout_height="34dp"
+                            android:layout_width="28.8dp"
+                            android:layout_height="28.8dp"
                             android:layout_gravity="center"
-
                             app:srcCompat="@drawable/wind" />
 
                         <TextView
                             android:id="@+id/textView3"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:text="22%"
+                            android:text="17.6%"
                             android:textAlignment="center"
                             android:textColor="@color/white"
                             android:textStyle="bold" />
@@ -193,24 +187,22 @@
                     <LinearLayout
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
-                        android:layout_margin="16dp"
-
-                        android:layout_weight="0.333"
+                        android:layout_margin="12.8dp"
+                        android:layout_weight="0.2667"
                         android:orientation="vertical">
 
                         <ImageView
                             android:id="@+id/imageView6"
-                            android:layout_width="34dp"
-                            android:layout_height="34dp"
+                            android:layout_width="28.8dp"
+                            android:layout_height="28.8dp"
                             android:layout_gravity="center"
-
                             app:srcCompat="@drawable/humidity" />
 
                         <TextView
                             android:id="@+id/textView5"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:text="18%"
+                            android:text="14.4%"
                             android:textAlignment="center"
                             android:textColor="@color/white"
                             android:textStyle="bold" />
@@ -219,7 +211,7 @@
                             android:id="@+id/textView6"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:text="Humiditly"
+                            android:text="Humidity"
                             android:textAlignment="center"
                             android:textColor="@color/white" />
                     </LinearLayout>
@@ -228,10 +220,12 @@
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/view2"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
             android:layout_marginTop="16dp"
             android:nestedScrollingEnabled="true" />
     </LinearLayout>
