--- a/app/src/main/res/layout/activity_future.xml
+++ b/app/src/main/res/layout/activity_future.xml
@@ -65,13 +65,13 @@
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="110dp"
                     android:orientation="horizontal">
 
                     <ImageView
                         android:id="@+id/imageView3"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
+                        android:layout_width="39dp"
+                        android:layout_height="106dp"
                         android:layout_weight="0.4"
                         app:srcCompat="@drawable/cloudy_sunny" />
 
@@ -113,7 +113,7 @@
                     android:id="@+id/linearLayout"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_marginTop="25.6dp"
+                    android:layout_marginTop="2.6dp"
                     android:orientation="horizontal"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
