--- a/app/src/main/res/layout/activity_future.xml
+++ b/app/src/main/res/layout/activity_future.xml
@@ -60,7 +60,8 @@
                 android:orientation="vertical"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent">
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent">
 
 
                 <LinearLayout
