--- a/app/src/main/res/layout/viewholder_future.xml
+++ b/app/src/main/res/layout/viewholder_future.xml
@@ -23,7 +23,7 @@
         android:id="@+id/picFuture"
         android:layout_width="45dp"
         android:layout_height="45dp"
-        android:layout_marginStart="32dp"
+        android:layout_marginStart="5dp"
 
         app:layout_constraintBottom_toBottomOf="@+id/dayTxt"
         app:layout_constraintStart_toEndOf="@+id/dayTxt"
@@ -46,7 +46,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
-        android:text="10"
+        android:text="Min: 10.00"
         android:textColor="@color/text_color"
         app:layout_constraintBottom_toBottomOf="@+id/picFuture"
         app:layout_constraintEnd_toEndOf="parent"
@@ -56,10 +56,12 @@
         android:id="@+id/highTxt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="32dp"
-        android:text="20"
+        android:layout_marginEnd="20dp"
+        android:layout_marginStart="10dp"
+        android:text="Max: 20.00"
         android:textColor="@color/text_color"
         app:layout_constraintBottom_toBottomOf="@+id/lowTxt"
         app:layout_constraintEnd_toStartOf="@+id/lowTxt"
+        app:layout_constraintStart_toEndOf="@+id/statusTxt"
         app:layout_constraintTop_toTopOf="@+id/lowTxt" />
 </androidx.constraintlayout.widget.ConstraintLayout>
