--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,9 @@
     <color name="white">#FFFFFFFF</color>
     <color name="background_color">#F3E9FE</color>
     <color name="text_color">#331866</color>
+    <color name="stringee_color">#F5C50A0A</color>
+    <color name="stringee_background_color">#2196F3</color>
+    <color name="stringee_start_color">#2196F3</color>
+    <color name="stringee_center_color">#673AB7</color>
+    <color name="stringee_end_color">#FF5722</color>
 </resources>
