--- a/app/src/main/res/layout/viewholder_future.xml
+++ b/app/src/main/res/layout/viewholder_future.xml
@@ -5,7 +5,8 @@
     android:layout_height="wrap_content"
     android:layout_marginStart="16dp"
     android:layout_marginTop="8dp"
-    android:layout_marginEnd="16dp">
+    android:layout_marginEnd="16dp"
+    android:background="@drawable/background_item">
 
     <TextView
         android:id="@+id/dayTxt"
