--- a/app/src/main/res/layout/viewholder_future.xml
+++ b/app/src/main/res/layout/viewholder_future.xml
@@ -15,7 +15,7 @@
         android:layout_marginStart="8dp"
         android:text="Sat"
         android:textStyle="bold"
-        android:textColor="@color/text_color"
+        android:textColor="@color/white"
         android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -37,7 +37,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:text="sunny"
-        android:textColor="@color/text_color"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="@+id/picFuture"
         app:layout_constraintStart_toEndOf="@+id/picFuture"
         app:layout_constraintTop_toTopOf="@+id/picFuture" />
@@ -48,7 +48,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:text="Min: 10.00"
-        android:textColor="@color/text_color"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="@+id/picFuture"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/picFuture" />
@@ -60,7 +60,7 @@
         android:layout_marginEnd="20dp"
         android:layout_marginStart="10dp"
         android:text="Max: 20.00"
-        android:textColor="@color/text_color"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="@+id/lowTxt"
         app:layout_constraintEnd_toStartOf="@+id/lowTxt"
         app:layout_constraintStart_toEndOf="@+id/statusTxt"
