Chỉnh sửa màu chữ kèm back ground của các item days trong future activity

--- a/app/src/main/res/layout/activity_city_list.xml
+++ b/app/src/main/res/layout/activity_city_list.xml
@@ -34,7 +34,8 @@
             android:inputType="textPostalAddress"
             android:padding="8dp"
             android:textColorHint="@color/black"
-            android:textSize="12sp" />
+            android:textSize="12sp"
+            android:imeOptions="actionSearch"/>
 
         <TextView
             android:id="@+id/orText"
